--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>My Contack</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h3>Contact Me</h3>
     <ul>
         <li>Phone no: 9423208724</li>
         <li>Email: ngshmk9@gmail.com</li>
