--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 <div class="middle-container">
   <div class="profile">
-    <img src="/images/Nyay.png" alt="Nyay's profile pic">
+    <img src="https://serving.photos.photobox.com/678572378a87c1bcd0b0731d5b1d5c324cdd66a1cad0cd79e51671b527e0eed80d30d37f.jpg" alt="Nyay's profile pic">
     <h2>Hello.</h2>
     <p class="intro">Welcome to my website! As a skilled web developer, I'm dedicated to creating dynamic and engaging online experiences for my clients.</p>
   </div>
